crates/ty_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Com…_-_Invalid_comparisions_-_Possibly_not_callabl…_(2074874f0a1a893).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Invalid comparisions - Possibly not callable dunder comparison methods
mdtest path: crates/ty_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A:
 2 |     __eq__ = None
 3 |     __ne__ = None
 4 |     __lt__ = None
 5 |     __gt__ = None
 6 |     __le__ = None
 7 |     __ge__ = None
 8 | 
 9 | # error: [unsupported-operator]
10 | reveal_type(A() == A())  # revealed: Unknown
11 | # error: [unsupported-operator]
12 | reveal_type(A() != A())  # revealed: Unknown
13 | # error: [unsupported-operator]
14 | reveal_type(A() < A())  # revealed: Unknown
15 | # error: [unsupported-operator]
16 | reveal_type(A() > A())  # revealed: Unknown
17 | # error: [unsupported-operator]
18 | reveal_type(A() <= A())  # revealed: Unknown
19 | # error: [unsupported-operator]
20 | reveal_type(A() >= A())  # revealed: Unknown
```

# Diagnostics

```
error[unsupported-operator]: Operator `==` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:10:13
   |
 9 | # error: [unsupported-operator]
10 | reveal_type(A() == A())  # revealed: Unknown
   |             ^^^^^^^^^^
11 | # error: [unsupported-operator]
12 | reveal_type(A() != A())  # revealed: Unknown
   |
info: Operator '==' from dunder method `__eq__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `!=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:12:13
   |
10 | reveal_type(A() == A())  # revealed: Unknown
11 | # error: [unsupported-operator]
12 | reveal_type(A() != A())  # revealed: Unknown
   |             ^^^^^^^^^^
13 | # error: [unsupported-operator]
14 | reveal_type(A() < A())  # revealed: Unknown
   |
info: Operator '!=' from dunder method `__ne__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:14:13
   |
12 | reveal_type(A() != A())  # revealed: Unknown
13 | # error: [unsupported-operator]
14 | reveal_type(A() < A())  # revealed: Unknown
   |             ^^^^^^^^^
15 | # error: [unsupported-operator]
16 | reveal_type(A() > A())  # revealed: Unknown
   |
info: Operator '<' from dunder method `__lt__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:16:13
   |
14 | reveal_type(A() < A())  # revealed: Unknown
15 | # error: [unsupported-operator]
16 | reveal_type(A() > A())  # revealed: Unknown
   |             ^^^^^^^^^
17 | # error: [unsupported-operator]
18 | reveal_type(A() <= A())  # revealed: Unknown
   |
info: Operator '>' from dunder method `__gt__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `<=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:18:13
   |
16 | reveal_type(A() > A())  # revealed: Unknown
17 | # error: [unsupported-operator]
18 | reveal_type(A() <= A())  # revealed: Unknown
   |             ^^^^^^^^^^
19 | # error: [unsupported-operator]
20 | reveal_type(A() >= A())  # revealed: Unknown
   |
info: Operator '<=' from dunder method `__le__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```

```
error[unsupported-operator]: Operator `>=` is not supported for types `A` and `A`
  --> src/mdtest_snippet.py:20:13
   |
18 | reveal_type(A() <= A())  # revealed: Unknown
19 | # error: [unsupported-operator]
20 | reveal_type(A() >= A())  # revealed: Unknown
   |             ^^^^^^^^^^
   |
info: Operator '>=' from dunder method `__ge__` is possibly not callable on object of type 'A'
info: rule `unsupported-operator` is enabled by default

```
